add new fields to pdf creation

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ docflux-backend/pdf-store/*.pdf
 docflux-backend/dist
 docflux-backend/node_modules
 docflux-frontend/node_modules
+*/.DS_Store
+.DS_Store
