--- a/docflux-backend/package.json
+++ b/docflux-backend/package.json
@@ -20,6 +20,7 @@
     "@types/cors": "^2.8.14",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "jspdf": "^2.5.1"
+    "jspdf": "^2.5.1",
+    "pdf-lib": "^1.17.1"
   }
 }
