--- a/docflux-backend/package.json
+++ b/docflux-backend/package.json
@@ -18,6 +18,7 @@
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/graphql": "^14.5.0",
+    "@types/mongodb": "^4.0.7",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
@@ -27,6 +28,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "graphql": "^16.8.0",
+    "mongodb": "^6.1.0",
     "pdf-lib": "^1.17.1",
     "uuid": "^9.0.1"
   }
